--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <center>
     <h1 class="btn btn-info heading">Object Detection</h1>
 <h3 id="status" class="btn btn-danger"></h3>
+<h3 class="btn btn-warning" id="number_objects"></h3>
   </center>
 
   <script src="main.js"></script>
